cmake_minimum_required(VERSION 3.2)
project(tutos)
add_subdirectory("tutorial 1 - hello ZED")
add_subdirectory("tutorial 2 - image capture")
add_subdirectory("tutorial 3 - depth sensing")
add_subdirectory("tutorial 4 - positional tracking")
add_subdirectory("tutorial 5 - spatial mapping")
add_subdirectory("tutorial 6 - object detection")
add_subdirectory("tutorial 7 - sensor data")
