cmake_minimum_required(VERSION 3.2)
project(tutos)
add_subdirectory("tutorial 1 - hello ZED/cpp")
add_subdirectory("tutorial 2 - image capture/cpp")
add_subdirectory("tutorial 3 - depth sensing/cpp")
add_subdirectory("tutorial 4 - positional tracking/cpp")
add_subdirectory("tutorial 5 - spatial mapping/cpp")
add_subdirectory("tutorial 6 - object detection/cpp")
add_subdirectory("tutorial 7 - sensor data/cpp")

